# rubrix

./: .gitignore  CHANGELOG.md  DEV_RELEASE_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  LAMBDA_AUTH_INTEGRATION.md  LATEX_EXAMPLE.md  QUICKSTART_CREDENTIALS.md  README.md  REFACTOR_PLAN.md  TESTING_PLAN.md  TODO.md  convert_calculus_to_cs_format.py  convert_html_to_markdown.py  fix-correct-answer-regex.patch  icons.sh  index.html  llm_log_01092026.txt  llm_log_03012026.txt  llm_log_03072026.txt  llm_log_03172026.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: copilot-instructions.md
docs/: ARCHITECTURE_DIAGRAM.md  BEDROCK_GATEWAY_CONTRACT.md  BUG_REPORT_DEPLOYMENT.md  BUG_REPORT_SCHEMA.json  BUG_REPORT_WORKFLOW.md  CREDENTIALS.md  _config.yml  changelog.md  faq.md  getting-started.md  index.md  release-build-readme.md  user-guide.md
exports/: output.json  questions.imscc  questions.txt  questions1.json  questions1.txt  rubrix-session.json
getauth/: Cargo.toml
src-tauri/: .taurignore  Cargo.toml  build.rs  llm_log.json  llm_log.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/knowledge/: arrays.txt  sol7.yaml
src-tauri/knowledge/Calculus/: newprompt.txt  prompt-json.md  prompt.txt  question-bank.json  question-bank0old.json  question-schema.json
src-tauri/knowledge/Computer Science/: classes.txt  question-bank.json  recursion.txt
src-tauri/knowledge/English 7/: sol7.yaml
src-tauri/src/: auth.rs  aws-llm.rs  config.rs  convert-test.py  knowledge.rs  llm.rs  main.rs  prompts.rs  qti.rs  qti_parser.py  temp.rs
(+81 files in other folders)
