[package]
name = "rubrix"
version = "0.3.0"
description = "AI-powered AP CS Test Generator"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "dialog-open", "shell-open", "dialog-save"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
regex = "1"
urlencoding = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
htmlescape = "0.3"
rust-embed = "8"
once_cell = "1"
dotenvy = "0.15.7"
chrono = "0.4.42"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
